force-app/main/default/objects/Training_Tutorial_Page__c/Training_Tutorial_Page__c.object-meta.xml
<CustomObject>
<deploymentStatus>Deployed</deploymentStatus>
<enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds>
<enableReports>false</enableReports><enableSearch>false</enableSearch>
    <label>Training Tutorial Page</label><nameField><label>Page Title</label><type>Text</type></nameField>
    <pluralLabel>Training Tutorial Pages</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility>
</CustomObject>