force-app/main/default/objects/Training_Tutorial_Page__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName><label>Page Content</label><length>32768</length><required>false</required><trackHistory>false</trackHistory><type>Html</type><visibleLines>15</visibleLines>
</CustomField>