force-app/main/default/objects/Training_Tutorial_Page__c/fields/Page_Number__c.field-meta.xml
<CustomField>
    <fullName>Page_Number__c</fullName><externalId>false</externalId><label>Page Number</label><precision>6</precision><required>true</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>