force-app/main/default/objects/Training_Tutorial_Page__c/fields/Training_Video__c.field-meta.xml
<CustomField>
    <fullName>Training_Video__c</fullName><label>Training Tutorial</label><referenceTo>Training_Video__c</referenceTo>
    <relationshipLabel>Tutorial Pages</relationshipLabel><relationshipName>Tutorial_Pages</relationshipName>
<trackTrending>false</trackTrending><type>MasterDetail</type><writeRequiresMasterRead>false</writeRequiresMasterRead>
</CustomField>